# Project_MesDevoirsCinq

./: .gitignore  README.md  config.py  main.py  pyproject.toml  reset_db.py
src/: db_manager.py  hh.py  utils.py  vacancy.py
